--- a/html/colossus_bootstrap.html
+++ b/html/colossus_bootstrap.html
@@ -9,6 +9,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
 <style>
 .myJumbotron {
@@ -61,33 +63,39 @@ img {
 <div class="row">
   <div class="col-lg-12">
     <div class="jumbotron myJumbotron"
-      <h1 style="margin-bottom: 0px;"> Spirent Layer 1 Debug Tool <img src="spirentx.jpg" class="img-responsive" width="145" height="160">
-</h1><br><br><br>
+      <h1 style="margin-bottom: 0px;"> Spirent Layer 1 Debug Tool <img src="spirentx.jpg" class="img-responsive" width="145" height="160"></h1><br><br><br>
     </div>
   </div>
 </div>
 <div id="title">
 </div>
 <div class="container-fluid">
-        <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <h3><b><u> Layer 1 Controls</u></b> </h3>
-            <li><h4> Layer 1 Spirent Firmware</h4><input id="hwmgrd" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
-            <li><h4> Auto Negotiation</h4><input id="AN" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
-            <li><h4> Forward Error Correction</h4><input id="FEC" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
-            <li><h4> Layer 1 Polling</h4><input id="poll" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
-          </ul>
-	</div>
-	<div id="section">
-	</div>
+  <div class="col-sm-3 col-md-2 sidebar">
+    <ul class="nav nav-sidebar">
+      <h3><b><u> Layer 1 Controls</u></b> </h3>
+      <li><h4> Layer 1 Spirent Firmware</h4><input id="hwmgrd" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
+      <li><h4> Auto Negotiation</h4><input id="AN" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
+      <li><h4> Forward Error Correction</h4><input id="FEC" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
+      <li><h4> Layer 1 Polling</h4><input id="poll" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
+    </ul>
+  </div>
+  <div class="container">
+    <div id="Front End">
+    </div>
+    <div id="PHY">
+    </div>
+    <div id="FPGA">
+    </div>
+  </div>
 </div>
+
 <footer>
   <p>&copy; Spirent Communications 2015</p>
 </footer>
 <script src="parseJson.js"></script>
 <script>
   $(function() {
-    $('#poll').change(function() {
+     $('#poll').change(function() {
       createHTML();
     })
   })
