Move scripts from html to new js file

--- a/html/portInfo.html
+++ b/html/portInfo.html
@@ -94,7 +94,7 @@ input { margin-bottom: 10px; }
       <li><h4> Auto Negotiation</h4><input id="AN" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
       <li><h4> Forward Error Correction</h4><input id="FEC" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
       <li><h4> Layer 1 Polling</h4><input id="poll" type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="info"></l1>
-      <li><input id="RecoverLink" type="button" class="btn btn-info" value="Recover Link" style="margin-top: 20px;"></li>   
+      <li><h4> Link Recovery</h4><input id="RecoverLink" type="button" class="btn btn-info" value="Attempt Link Recovery"></li>   
     </ul>
  </div>
  <div class="container"> 
@@ -224,146 +224,6 @@ input { margin-bottom: 10px; }
 </footer>
 <script src="parseJson.js"></script>
 <script src="handleReadWrite.js"></script>
-<script>
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-</script>
-<script>
-  $(function() {
-     $("#poll").change(function() {
-      createHTML();
-    })
-  })
-</script>
-<script>
-  $(function() {
-    $("#AN").change(function() {
-      $.post("AN", {"Attribute": "AN", "Value": ($("#AN").is(":checked"))});
-		   })
-           })
-</script>
-<script>
-  $(function() {
-    $("#FEC").change(function() {
-      $.post("FEC", {"Attribute": "FEC", "Value": ($("#FEC").is(":checked"))});
-                   })
-           })
-</script>
-<script>
-  $(function() {
-  $("#RecoverLink").click(function() {
-  $.post("Recover Link", {"Attribute": "RecoverLink"});
-  })
-  })
-</script>
-<script>
-   $(function() {
-   $("#FrontEndPageId").click(function() {
-   $("#Front_End").hide();
-   $("#PHY").hide();
-   $("#FPGA").hide();
-   $("#Mdio").hide();
-   $("#I2C").hide();
-   $("#Bar1").hide();
-   $("#Front_End").fadeIn(600);
-   })
-   })
-</script>
-<script>
-  $(function() {
-  $("#PHYPageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#PHY").fadeIn(600);
-  })
-  })
-</script>
-<script>
-  $(function() {
-  $("#FPGAPageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#FPGA").fadeIn(600);
-  })
-  })
-</script>
-<script>
-  $(function() {
-  $("#AllPageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#Front_End").fadeIn(600);
-  $("#PHY").fadeIn(600);
-  $("#FPGA").fadeIn(600);
-  })
-  })
-</script>
-<script>
-  $(function() {
-  $("#MdioPageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#Mdio").fadeIn(600);
-  })
-  })
-</script>
-<script>
-  $(function() {
-  $("#I2CPageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#I2C").fadeIn(600);
-  })
-  })
-</script>
-<script>
-  $(function() {
-  $("#Bar1PageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#Bar1").fadeIn(600);
-  })
-  })
-</script>
-<script>
-  $(function() {
-  $("#AllProtocolsPageId").click(function() {
-  $("#Front_End").hide();
-  $("#PHY").hide();
-  $("#FPGA").hide();
-  $("#Mdio").hide();
-  $("#I2C").hide();
-  $("#Bar1").hide();
-  $("#Mdio").fadeIn(600);
-  $("#I2C").fadeIn(600);
-  $("#Bar1").fadeIn(600);
-  })
-  })
-</script>
+<script src="clickMgr.js"></script>
 </body>
 </html>
